# pcsx2x6

./: CMakeLists.txt  PCSX2_qt.sln  README.md  compile.bat
.github/scripts/: build-deps.sh
.github/workflows/: build-libretro.yml  linux_build_matrix.yml  macos_build_matrix.yml  release_cut_new.yml  updater_api.yml  windows_build_matrix.yml
cmake/: BuildParameters.cmake  Pcsx2Utils.cmake  SearchForStuff.cmake
common/: CMakeLists.txt  FastJmp.cpp  FastJmp.h  Pcsx2Defs.h
common/Linux/: LnxHostSys.cpp  LnxMisc.cpp
pcsx2/: CMakeLists.txt  Config.h  Counters.cpp  GS.cpp  GameList.cpp  GameList.h  Gif.h  Gif_Unit.cpp  Gif_Unit.h  HwWrite.cpp  Interpreter.cpp  IopCounters.cpp  IopDma.cpp  IopHw.h  IopMem.cpp  MTGS.cpp  Memory.cpp  MemoryTypes.h  Pcsx2Config.cpp  R3000A.cpp  R3000A.h  R3000AInterpreter.cpp  R5900.cpp  R5900.h  SaveState.cpp  SaveState.h  VMManager.cpp  VMManager.h  pcsx2.vcxproj  pcsx2.vcxproj.filters
pcsx2-libretro/: CMakeLists.txt  LibretroCore.cpp
pcsx2-qt/: CMakeLists.txt  MainWindow.ui  SetupWizardDialog.ui  pcsx2-qt.vcxproj  pcsx2-qt.vcxproj.filters
pcsx2-qt/Settings/: BIOSSettingsWidget.cpp  ControllerBindingWidget.cpp  JVSControlsWidget.cpp  JVSControlsWidget.h  JVSControlsWidget.ui  USBBindingWidget_GunCon2.ui
pcsx2/CDVD/: CDVD.cpp  IsoReader.cpp  IsoReader.h
pcsx2/DEV9/: ACATA.cpp  ACATA.h  ACATAPI.cpp  ACATAPI.h  ACATA_CMD_RESPONSES  ACATA_IO.cpp  ACATA_IO_CHD.cpp  ACATA_internal.h  ACCORE.cpp  ACCORE.h  ACJV.cpp  ACJV.h  ACRAM.cpp  ACRAM.h  ACSRAM.cpp  ACSRAM.h  ACUART.cpp  ACUART.h  (+2 more)
tools/: make-acgame.README.md  make-acgame.sh
(+50 files in other folders)
